Added a user avatar, and both index and view endpoints for players
